Generate tls certificate for apiserver

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,8 +1,8 @@
 all:
+  hosts:
+    master:
+      ansible_host: pi1
   children:
-    master_nodes:
-      hosts:
-        pi1:
     worker_nodes:
       hosts:
         pi2:
