--- a/roles/etcd/vars/main.yml
+++ b/roles/etcd/vars/main.yml
@@ -1,6 +1,6 @@
 etcd_cluster:
   "{% set hosts = [] %}\
   {% for host in groups['all'] %}\
-  {{ hosts.append(host + '=http://' + hostvars[host].ansible_default_ipv4.address + ':2380') }}\
+  {{ hosts.append(hostvars[host].ansible_hostname + '=http://' + hostvars[host].ansible_default_ipv4.address + ':2380') }}\
   {% endfor %}\
   {{ hosts|join(',') }}"
