--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 - hosts: all
   become: yes
   vars:
-    cluster_cidr: 10.5.0.0/16
+    pod_cluster_ip_range: 10.5.0.0/16
   roles:
     - docker
     - etcd
@@ -9,17 +9,24 @@
     - docker-with-flannel
     - kube-node
 
+- hosts: master
+  become: yes
+  roles:
+    - ca
+
 - hosts: worker_nodes
   become: yes
   vars:
-    master_ip: "{{ hostvars[groups['master_nodes'][0]].ansible_default_ipv4.address }}"
+    master_ip: "{{ hostvars['master'].ansible_default_ipv4.address }}"
   roles:
     - kube-worker
 
-- hosts: master_nodes
+- hosts: master
   become: yes
   vars:
     hyperkube_image_name: k8s.gcr.io/hyperkube-arm
     hyperkube_image_tag: v1.12.0
+    service_cluster_ip_range: 10.0.0.0/24
+    master_cluster_ip: 10.0.0.1
   roles:
     - kube-master
