--- a/playbook.yml
+++ b/playbook.yml
@@ -28,5 +28,7 @@
     hyperkube_image_tag: v1.12.0
     service_cluster_ip_range: 10.0.0.0/24
     master_cluster_ip: 10.0.0.1
+    dns_service_cluster_ip: 10.0.0.2
   roles:
     - kube-master
+    - kube-addons
