--- a/roles/kube-node/files/kubelet.service
+++ b/roles/kube-node/files/kubelet.service
@@ -5,11 +5,8 @@ After=docker.service
 
 [Service]
 ExecStart=/usr/bin/hyperkube kubelet \
-  --cgroup-driver=cgroupfs \
-  --runtime-cgroups=/systemd/system.slice \
-  --kubelet-cgroups=/systemd/system.slice \
-  --pod-manifest-path=/etc/kubernetes/manifests \
-  --kubeconfig=/etc/kubernetes/kubelet-kubeconfig.yml
+  --config=/etc/kubernetes/kubelet/config.yml \
+  --kubeconfig=/etc/kubernetes/kubelet/kubeconfig.yml
 Restart=always
 RestartSec=5s
 
