--- a/roles/kube-master/tasks/main.yml
+++ b/roles/kube-master/tasks/main.yml
@@ -19,34 +19,43 @@
     - { src: kubeconfig.yml, dest: /etc/kubernetes/kube-proxy/kubeconfig.yml }
     - { src: kubeconfig.yml, dest: /root/.kube/config }
 
+- name: Create apiserver and controller-manager directories
+  file:
+    path: "/etc/kubernetes/{{ item }}"
+    state: directory
+  with_items:
+    - apiserver
+    - controller-manager
+
 - name: Generate rsa private key for tls certificate
-  shell: openssl genrsa -out /etc/kubernetes/apiserver.key
+  shell: openssl genrsa -out /etc/kubernetes/apiserver/tls.key
   args:
-    creates: /etc/kubernetes/apiserver.key
+    creates: /etc/kubernetes/apiserver/tls.key
 
 - name: Copy config file for generating csr
   template:
     src: csr.conf.j2
-    dest: /etc/kubernetes/csr.conf
+    dest: /etc/kubernetes/apiserver/csr.conf
     mode: 0644
 
 - name: Generate tls certificate
   shell: |
-    openssl req -new -key apiserver.key -out apiserver.csr -config csr.conf
-    openssl x509 -req -in apiserver.csr -CA /etc/ssl/certs/ca.crt -CAkey /etc/ssl/private/ca.key -CAcreateserial -out apiserver.crt -days 10000 -extensions v3_ext -extfile csr.conf
+    openssl req -new -key tls.key -out tls.csr -config csr.conf
+    openssl x509 -req -in tls.csr -CA /etc/ssl/certs/ca.crt -CAkey /etc/ssl/private/ca.key -CAcreateserial -out tls.crt -days 10000 -extensions v3_ext -extfile csr.conf
   args:
-    chdir: /etc/kubernetes
-    creates: /etc/kubernetes/apiserver.crt
+    chdir: /etc/kubernetes/apiserver
+    creates: /etc/kubernetes/apiserver/tls.crt
 
 - name: Generate rsa private key for service accounts
-  shell: openssl genrsa -out /etc/kubernetes/service-accounts-private.pem
+  shell: openssl genrsa -out /etc/kubernetes/controller-manager/sa-private.pem
   args:
-    creates: /etc/kubernetes/service-accounts-private.pem
+    creates: /etc/kubernetes/controller-manager/sa-private.pem
 
 - name: Generate rsa public key for service accounts
-  shell: openssl rsa -in /etc/kubernetes/service-accounts-private.pem -outform PEM -pubout -out /etc/kubernetes/service-accounts-public.pem
+  shell: openssl rsa -in controller-manager/sa-private.pem -outform PEM -pubout -out apiserver/sa-public.pem
   args:
-    creates: /etc/kubernetes/service-accounts-public.pem
+    chdir: /etc/kubernetes
+    creates: /etc/kubernetes/apiserver/sa-public.pem
 
 - name: Copy pods and tokens
   template:
@@ -54,7 +63,13 @@
     dest: "{{ item.dest }}"
     mode: "{{ item.mode }}"
   with_items:
-    - { src: known-tokens.csv.j2, dest: /etc/kubernetes/known-tokens.csv, mode: "600" }
+    - { src: known-tokens.csv.j2, dest: /etc/kubernetes/apiserver/known-tokens.csv, mode: "600" }
     - { src: kube-apiserver.json.j2, dest: /etc/kubernetes/manifests/kube-apiserver.json, mode: "644" }
     - { src: kube-controller-manager.json.j2, dest: /etc/kubernetes/manifests/kube-controller-manager.json, mode: "644" }
     - { src: kube-scheduler.json.j2, dest: /etc/kubernetes/manifests/kube-scheduler.json, mode: "644" }
+
+- name: Create directory for pods
+  file:
+    path: /etc/kubernetes/pods
+    state: directory
+    mode: 0666
