--- a/roles/kube-dns/tasks/main.yml
+++ b/roles/kube-dns/tasks/main.yml
@@ -8,3 +8,7 @@
     src: coredns.yml.j2
     dest: /etc/kubernetes/addons/coredns.yml
     mode: 0644
+
+- name: Create dns addon
+  shell: kubectl create -f /etc/kubernetes/addons/coredns.yml
+  ignore_errors: yes
