Use kubectl apply instead of create

--- a/roles/kube-dns/tasks/main.yml
+++ b/roles/kube-dns/tasks/main.yml
@@ -10,7 +10,4 @@
     mode: 0644
 
 - name: Create dns addon
-  shell: kubectl create -f /etc/kubernetes/addons/coredns.yml
-  register: kubectl_result
-  changed_when: kubectl_result.rc == 0
-  ignore_errors: yes
+  shell: kubectl apply -f /etc/kubernetes/addons/coredns.yml
