--- a/roles/kube-dns/tasks/main.yml
+++ b/roles/kube-dns/tasks/main.yml
@@ -11,3 +11,7 @@
 
 - name: Create dns addon
   shell: kubectl apply -f /etc/kubernetes/addons/coredns.yml
+
+- name: Wait for coredns rollout
+  shell: kubectl rollout status --namespace kube-system deployment/coredns
+  changed_when: false
