Update k8s to 1.13.4 + reboot and wait for nodes after setup

--- a/playbook-base.yml
+++ b/playbook-base.yml
@@ -22,3 +22,20 @@
   become: yes
   roles:
     - kube-master
+
+- hosts: all
+  become: yes
+  tasks:
+  - name: Reboot all cluster nodes
+    reboot:
+      pre_reboot_delay: 60
+
+- hosts: master
+  become: yes
+  tasks:
+  - name: Wait for all workers to join
+    shell: kubectl get nodes | grep Ready
+    register: workers_out
+    until: workers_out.stdout_lines | length == groups['all'] | length
+    retries: 30
+    delay: 10
