--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -10,5 +10,5 @@
 
 - name: Install from apt
   apt:
-    name: docker-ce=18.03.1~ce-0~debian
+    name: docker-ce={{ docker_version }}
     update_cache: yes
