--- a/roles/ca/tasks/main.yml
+++ b/roles/ca/tasks/main.yml
@@ -1,12 +1,7 @@
 - when: inventory_hostname  == "master"
   block:
-  - name: Generate CA private key
-    shell: openssl genrsa -out /etc/ssl/private/ca.key
-    args:
-      creates: /etc/ssl/private/ca.key
-
-  - name: Generate root certificate
-    shell: openssl req -x509 -new -nodes -key private/ca.key -subj "/CN={{ ansible_default_ipv4.address }}" -days 10000 -out certs/ca.crt
+  - name: Generate CA private key and root certificate
+    command: openssl req -newkey rsa -nodes -keyout private/ca.key -x509 -subj "/CN={{ ansible_default_ipv4.address }}" -days 10000 -out certs/ca.crt
     args:
       chdir: /etc/ssl
       creates: certs/ca.crt
@@ -23,6 +18,6 @@
     dest: /usr/local/share/ca-certificates/ca.crt
 
 - name: Install the certificate
-  shell: update-ca-certificates
+  command: update-ca-certificates
   register: install_result
   changed_when: "'0 added, 0 removed' not in install_result.stdout"
