--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -3,10 +3,9 @@
     url: https://download.docker.com/linux/debian/gpg
 
 - name: Add docker repository to apt sources
-  copy: 
-    dest: /etc/apt/sources.list.d/docker.list
-    content: deb [arch=armhf] https://download.docker.com/linux/debian stretch stable
-    mode: 0644
+  apt_repository:
+    filename: docker
+    repo: deb [arch=armhf] https://download.docker.com/linux/debian stretch stable
 
 - name: Install from apt
   apt:
