--- a/playbook-base.yml
+++ b/playbook-base.yml
@@ -23,20 +23,8 @@
   roles:
     - kube-master
 
-- hosts: all
+- name: Reboot all cluster nodes
+  hosts: all
   become: yes
-  tasks:
-  - name: Reboot all cluster nodes
-    reboot:
-      pre_reboot_delay: 60
-
-- hosts: master
-  become: yes
-  tasks:
-  - name: Wait for all workers to join
-    shell: kubectl get nodes | grep Ready
-    register: workers_out
-    until: workers_out.stdout_lines | length == groups['all'] | length
-    retries: 30
-    delay: 10
-    changed_when: false
+  roles:
+    - reboot
