--- a/roles/flannel/tasks/main.yml
+++ b/roles/flannel/tasks/main.yml
@@ -1,11 +1,30 @@
-- name: Copy binary
-  copy: 
-    src: downloads/flanneld
+- delegate_to: localhost
+  run_once: true
+  become: false
+  block:
+    - name: Create download directory
+      file:
+        state: directory
+        dest: "{{ role_path }}/files/downloads"
+
+    - name: Download binary
+      get_url:
+        url: https://github.com/coreos/flannel/releases/download/{{ flannel_version }}/flannel-{{ flannel_version }}-linux-arm.tar.gz
+        dest: "{{ role_path }}/files/downloads/flannel-{{ flannel_version }}-linux-arm.tar.gz"
+
+- name: Extract and copy binary
+  unarchive:
+    src: downloads/flannel-{{ flannel_version }}-linux-arm.tar.gz
     dest: /usr/bin
     mode: 0755
+    exclude:
+      - mk-docker-opts.sh
+      - README*
+    extra_opts:
+      - --no-same-owner
 
 - name: Add systemd service
-  template: 
+  template:
     src: flannel.service.j2
     dest: /etc/systemd/system/flannel.service
     mode: 0644
