--- a/roles/kube-master/tasks/main.yml
+++ b/roles/kube-master/tasks/main.yml
@@ -1,13 +1,30 @@
-- name: Pull hyperkube docker image
-  command: docker pull {{ hyperkube_image_name }}:{{ hyperkube_image_tag }}
-  register: pull_result
-  changed_when: "'Image is up to date' not in pull_result.stdout"
+- delegate_to: localhost
+  run_once: true
+  become: false
+  block:
+    - name: Create download directory
+      file:
+        state: directory
+        dest: "{{ role_path }}/files/downloads"
 
-- name: Copy kubectl binary
-  copy:
-    src: downloads/kubectl
+    - name: Download kubernetes client binaries
+      get_url:
+        url: https://dl.k8s.io/{{ kubernetes_version }}/kubernetes-client-linux-arm.tar.gz
+        dest: "{{ role_path }}/files/downloads/kubernetes-client-linux-arm-{{ kubernetes_version }}.tar.gz"
+
+- name: Extract and copy kubectl
+  unarchive:
+    src: downloads/kubernetes-client-linux-arm-{{ kubernetes_version }}.tar.gz
     dest: /usr/bin
     mode: 0755
+    extra_opts:
+      - --no-same-owner
+      - --strip-components=3
+
+- name: Pull hyperkube docker image
+  command: docker pull {{ hyperkube_image_name }}:{{ kubernetes_version }}
+  register: pull_result
+  changed_when: "'Image is up to date' not in pull_result.stdout"
 
 - name: Copy kubeconfig
   copy:
