Configure which machines compose the etcd cluster

--- a/hosts.yml
+++ b/hosts.yml
@@ -6,7 +6,9 @@ all:
     worker_nodes:
       hosts:
         pi2:
+          etcd_cluster: true
         pi3:
+          etcd_cluster: true
         pi4:
   vars:
     ansible_user: pi
