--- a/roles/docker-with-flannel/files/override.conf
+++ b/roles/docker-with-flannel/files/override.conf
@@ -1,6 +1,6 @@
 [Unit]
 After=flannel.service
-Requires=flannel.service
+StartLimitIntervalSec=0
 
 [Service]
 EnvironmentFile=/var/run/flannel/subnet.env
