--- a/roles/kube-node/files/kubelet.service
+++ b/roles/kube-node/files/kubelet.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Kubelet for Kubernetes
-Requires=docker.service
 After=docker.service
+StartLimitIntervalSec=0
 
 [Service]
 ExecStart=/usr/bin/hyperkube kubelet \
