--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -5,9 +5,10 @@
 - name: Add docker repository to apt sources
   apt_repository:
     filename: docker
-    repo: deb [arch=armhf] https://download.docker.com/linux/debian stretch stable
+    repo: deb [arch=armhf] https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
 
 - name: Install from apt
   apt:
     name: docker-ce={{ docker_version }}
+    install_recommends: no
     update_cache: yes
